--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,17 @@ body{
     top: 70px;
     left: 100px;
 }
-
+.buscador{
+    display: inline-block;
+    position: absolute;
+    left: 550px;
+    top: 80px;
+    z-index: 1;
+}
+.textobuscar{
+    display: inline;
+    color: white;
+}
 
 .asd{
     margin: 9px !important;
