--- a/src/index.css
+++ b/src/index.css
@@ -111,6 +111,8 @@ body{
     display: inline-block;
     margin-left: 20px;    
 }
+
+
 p{
     margin: 0px !important;
 }
@@ -121,3 +123,30 @@ p{
 .contenedorPokemon-Imagen{
     width: 40vw;
 }
+.msjError{
+    position: absolute;
+    top:50%;
+    left: 50%;
+}
+.spinner {
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border-left-color: #09f;
+    position: absolute;
+    top:50%;
+    left: 50%;
+  
+    animation: spin 1s ease infinite;
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+  
+    100% {
+      transform: rotate(360deg);
+    }
+  }
