--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,7 +7,7 @@ body{
     /* width: 90%; */
     height: 100vh;
     position: relative;
-    background-image:  url("../src/img/pokemonFondo.jpg");
+    background-image:  url("../img/pokemonFondo.jpg");
     background-position: center center;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -22,15 +22,10 @@ body{
 	right: 0;
 	background-color: rgba(0,0,0,0.4);
 }
-.encabezado{
-    position:absolute ;
-    top: 0;
-}
-
 .encabezadologo{
     width: 145px;
     height: 45px;
-    margin-top: 20px;
+    margin-top: 0px;
     margin-left: 30px;
     cursor: pointer;
 }
@@ -38,8 +33,8 @@ body{
 .contenido{
     display: flex;
     flex-direction: row; 
-    width: 78vw;
-    height: 70vh;
+    width: 90vw;
+    height: 80vh;
     background-color: rgba(0,0,0,.5);
     padding-top: 60px;
     padding-right: 68px;
@@ -49,23 +44,17 @@ body{
     border-radius: 4px;
     position: absolute;
     top: 70px;
-    left: 100px;
+    left: 70px;
 }
-.buscador{
-    display: inline-block;
-    position: absolute;
-    left: 550px;
-    top: 80px;
-    z-index: 1;
-}
-.textobuscar{
-    display: inline;
-    color: white;
-}
-
-.asd{
-    margin: 9px !important;
-    width: 40vw;
+.pokeDetalle{
+    width: 35vw;
+    color:white;
+    display: block;
+    font-size: 25px;
+    margin-left: 30px;
+    font-weight: bold;
+    text-align: center;
+    border: 3px solid green;
 }
 .detallePokemon{
     color:white;
@@ -75,31 +64,44 @@ body{
     font-weight: bold;
     text-align: center;
     border: 3px solid green;
+    width: 200px;
+}
+.detalleEstadisticas{
+        color:white;
+        display: inline-block;
+        font-size: 14px;
+        margin-left: 30px;
+        font-weight: bold;
+        text-align: center;
+        border: 1px solid green;
+        width: 300px;
+        flex-direction: row-reverse;
 }
 .Poke{
     display: inline-block;
     color: white;
-    font-size: 16px;
+    font-size: 15px;
+}
+.pokeDimensiones{
+    color:white;
+    font-size: 15px;
+    margin-left: 30px;
+    font-weight: bold;
+    text-align: center;
 }
 .imagenPoke{
-    height: 40vh;
+    height: 50vh;
+    width: 30vw;
 }
 .cardImagenPoke{
-    border: 3px solid green;
+    border: 1px solid green;
     color: white;
     font-size: 25px;
     margin-left: 30px;
     font-weight: bold;
     text-align: center;
-}
-.perfilActor{
-    width: 300px;
-    height: 250px;
-    margin-left: 110px;
-    border: 0px;
-    display: inline;
-}
 
+}
 .div-Buscar{
     color: white; 
     margin-left: 30px;
@@ -121,7 +123,7 @@ p{
     border: 1px solid red;
 }
 .contenedorPokemon-Imagen{
-    width: 40vw;
+    width: 50vw;
 }
 .msjError{
     position: absolute;
@@ -140,7 +142,7 @@ p{
   
     animation: spin 1s ease infinite;
   }
-  
+
   @keyframes spin {
     0% {
       transform: rotate(0deg);
@@ -149,4 +151,47 @@ p{
     100% {
       transform: rotate(360deg);
     }
+  }
+  .dimensiones{
+    border: 1px solid blue;
+    color:white;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    display: inline;
+  }
+  li{
+    display: inline-block;
+    margin-left: 15px;
+  }
+  #grass{
+    background-color: rgba(32, 128, 0, 0.89);
+    border-radius: 5px;
+    width: 5vw;
+  }
+  #poison{
+    background-color: blueviolet;
+    border-radius: 5px;
+    width: 5vw;
+  }
+  #fire{
+    background-color: red;
+    border-radius: 5px;
+    width: 5vw;
+  }
+  #flying{
+    background-color: white;
+    color: black;
+    border-radius: 5px;
+    width: 5vw;
+  }
+  #water{
+    background-color: blue;
+    border-radius: 5px;
+    width: 5vw;
+  }
+  #normal{
+    background-color: grey;
+    border-radius: 5px;
+    width: 5vw;
   }
