--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,7 +7,7 @@ body{
     /* width: 90%; */
     height: 100vh;
     position: relative;
-    background-image:  url("../src/img/pokemonFondo.jpg");
+    background-image:  url("../img/pokemonFondo.jpg");
     background-position: center center;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -22,15 +22,11 @@ body{
 	right: 0;
 	background-color: rgba(0,0,0,0.4);
 }
-.encabezado{
-    position:absolute ;
-    top: 0;
-}
 
 .encabezadologo{
     width: 145px;
     height: 45px;
-    margin-top: 20px;
+    margin-top: 0px;
     margin-left: 30px;
     cursor: pointer;
 }
@@ -50,17 +46,6 @@ body{
     position: absolute;
     top: 70px;
     left: 100px;
-}
-.buscador{
-    display: inline-block;
-    position: absolute;
-    left: 550px;
-    top: 80px;
-    z-index: 1;
-}
-.textobuscar{
-    display: inline;
-    color: white;
 }
 
 .asd{
@@ -150,3 +135,4 @@ p{
       transform: rotate(360deg);
     }
   }
+ 
