--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,293 +1,101 @@
-body {
-    margin: 0;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
-/*Login*/
-.fondo {
-    /* width: 90%; */
-    height: 100vh;
-    position: relative;
-    background-image: url("../img/pokemonFondo.jpg");
-    background-position: center center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.fondo:before {
-    content: '';
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: rgba(0, 0, 0, 0.4);
-}
-
-.encabezadologo {
-    width: 145px;
-    height: 45px;
-    margin-top: 0px;
-    margin-left: 30px;
-    cursor: pointer;
-}
-
-.contenido{
-    display: flex;
-    flex-direction: row;
-    width: 90vw;
-    height: 85vh;
-    background-color: rgba(0, 0, 0, .5);
-    padding-top: 60px;
-    padding-right: 68px;
-    padding-bottom: 40px;
-    padding-left: 68px;
-    border-radius: 4px;
-    position: absolute;
-    top: 70px;
-    left: 70px;
-}
-.pokeDetalle {
-    width: 35vw;
-    color: white;
-    display: block;
-    font-size: 25px;
-    margin-left: 30px;
-    font-weight: bold;
-    text-align: center;
-}
-.divCenter{
-    text-align: center;
-}
-.divDisplayBlock{
-    display: inline-block;
-}
-.divMargin{
-    margin-left: 30px; 
-    margin-top: 15px;
-}
-.detallePokemon {
-    color: white;
-    display: block;
-    font-size: 25px;
-    margin-left: 30px;
-    font-weight: bold;
-    text-align: center;
-    width: 200px;
-}
-.detalleHabilidades{
-    color: white;
-    display: inline-block;
-    font-size: 25px;
-    margin-left: 30px;
-    font-weight: bold;
-    text-align: center;
-    width: 20vw;
-}
-.Poke {
-    display: inline-block;
-    color: white;
-    font-size: 15px;
-}
-
-.imagenPoke {
-    height: 60vh;
-    width: 40vw;
-}
-
-.cardImagenPoke {
-    color: white;
-    font-size: 25px;
-    margin-left: 30px;
-    font-weight: bold;
-    text-align: center;
-
-}
-.contenedorPokemon-Imagen{
-    width: 50vw;
-}
-
-.msjError{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-}
-
-/*Empieza Codigo del spinner*/
-.spinner{
-    border: 4px solid rgba(0, 0, 0, 0.1);
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
-    border-left-color: #09f;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-
-    animation: spin 1s ease infinite;
-}
-
-@keyframes spin{
-    0% {
-        transform: rotate(0deg);
+/*Globales*/
+body{
+    background-color: #4c4848;
+    font-family: 'Open Sans', sans-serif;
+  }
+  h2{
+      font-family: 'Oswald', sans-serif;
+      font-size: 2.4em;
+      text-transform: uppercase;
+      text-align: center;
+      color:rgb(0, 0, 0);
     }
-
-    100% {
-        transform: rotate(360deg);
+  .contenedor{
+      width: 100%;
+      margin:0 auto;
     }
-}
-/*Termina Codigo del spinner*/
-
-/*Empieza Codigo de las dimensiones*/
-.dimensiones{
-    color: white;
-    font-size: 16px;
-    font-weight: bold;
-    text-align: center;
-    display: inline;
-}
-
-.pokeDimensiones{
-    color: white;
-    font-size: 15px;
-    margin-left: 30px;
-    font-weight: bold;
-    text-align: center;
-}
-/*Termina Codigo de las dimensiones*/
-
-/*Empieza codigo dee tiquetas*/
-li{
-    display: inline-block;
-    width: 9vw;
-}
-li#special-attack, #hp, #attack, #defense, #special-defense, #speed{
-    display: inline-block;
-    width: 14vw;
-    font-size: 14px;
-    font-weight: bold;
-    color: white;
-}
-.detalleEstadisticas {
-    color: white;
-    display: inline-block;
-    font-size: 14px;
-    margin-left: 30px;
-    font-weight: bold;
-}
-p{
-    margin: 0px !important;
-}
-/*Termina codigo de etiquetas*/
-
-/*ID de Tipos*/
-#grass{
-    background-color: #9bcc50;
-    border-radius: 5px;
-    width: 5vw;
-    margin-left: 10px;
-}
-#poison{
-    background-color: #b97fc9;
-    border-radius: 5px;
-    width: 5vw;
-    margin-left: 10px;
-}
-#fire{
-    background-color: #fd7d24;
-    border-radius: 5px;
-    width: 5vw;
-    margin-left: 10px;
-}
-#flying{
-    background-color: #bdb9b8c8;
-    border-radius: 5px;
-    width: 5vw;
-    margin-left: 10px;
-}
-#water{
-    background-color: #4592c4;
-    border-radius: 5px;
-    width: 5vw;
-    margin-left: 10px;
-}
-#normal{
-    background-color: #a4acaf;
-    border-radius: 5px;
-    width: 5vw;
-    margin-left: 10px;
-}
-#electric{
-    background-color: rgba(255, 255, 0, 0.61);
-    border-radius: 5px;
-    width: 5vw;
-    margin-left: 10px;
-}
-#ground{
-    background-color: #ab9842;
-    border-radius: 5px;
-    width: 5vw;
-    margin-left: 10px;
-}
-#psychic{
-    background-color:#f366b9;
-    border-radius: 5px;
-    width: 5vw;
-    margin-left: 10px;
-}
-#ice{
-    background-color:#51c4e7;
-    border-radius: 5px;
-    width: 5vw;
-    margin-left: 10px;
-}
-#steel{
-    background-color: #9eb7b8;
-    border-radius: 5px;
-    width: 5vw;
-    margin-left: 10px;
-}
-#ghost{
-    background-color: #7b62a3;
-    border-radius: 5px;
-    width: 5vw;
-    margin-left: 10px;
-}
-#dragon{
-    background-color: #f16e57;
-    border-radius: 5px;
-    width: 5vw;
-    margin-left: 10px;
-}
-#dark{
-    background-color: #707070;
-    border-radius: 5px;
-    width: 5vw;
-    margin-left: 10px;
-}
-#bug{
-    background-color: #729f3f;
-    border-radius: 5px;
-    width: 5vw;
-    margin-left: 10px;
-}
-#fairy{
-    background-color: #fdb9e9;
-    border-radius: 5px;
-    width: 5vw;
-    margin-left: 10px;
-}
-#fighting{
-    background-color: #d56723;
-    border-radius: 5px;
-    width: 5vw;
-    margin-left: 10px;
-}
-#rock{
-    background-color: #a38c21;
-    border-radius: 5px;
-    width: 5vw;
-    margin-left: 10px;
-}
-/*Termina Codigo de los tipos*/
+    @media(min-width:480px){
+      .contenedor{
+        width: 95%;
+      }
+    }
+    @media(min-width:768px){
+      .contenedor{
+        width: 90%;
+      }
+    }
+    @media(min-width:992px){
+      .contenedor{
+        width: 90%;
+        max-width: 1100px;
+      }
+    }
+    .seccion{
+      padding:30px 0;
+    }
+    .seccion p{
+      font-size: 1.2em;
+      text-align: center;
+    }
+  /*NAV*/
+  .encabezadologo{
+      width: 145px;
+      height: 45px;
+      margin-top: 0px;
+      margin-left: 30px;
+      cursor: pointer;
+  }
+    /*Invitados*/
+  .lista-pokemon li{
+      padding: 10px;
+      float:left;
+      list-style: none;
+    }
+    
+    @media(min-width:480px){
+      .lista-pokemon li{
+        width: 50%;
+      }
+    }
+    @media(min-width:768px){
+      .lista-pokemon li{
+        width: 25%;
+      }
+    }
+    
+    .pokemon{
+      position: relative;
+    }
+    .pokemon img{
+      max-width:100%;
+      filter: gray;
+      -webkit-filter: grayscale(1);
+      transition: all .5s ease-in-out;
+    }
+    
+    .pokemon:hover img{
+      filter: grayscale(0);
+      transform: scale(1.1);
+    
+    }
+    .pokemon p{
+      position:absolute;
+      bottom: 0;
+      left: 0;
+      padding:15px 10px;
+      margin:0;
+      background-color: rgba(0, 0, 0, .55);
+      width: 100%;
+      text-align: left;
+      font-family: 'Oswald', sans-serif;
+      color:rgb(165, 21, 21);
+      text-transform: uppercase;
+      font-size: 1.4em;
+      transition: all .5 ease-in-out;
+    }
+    
+    .pokemon:hover p{
+      bottom: -80px;
+      opacity: 0;
+    }
+  
