--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,101 +1,149 @@
 /*Globales*/
-body{
-    background-color: #4c4848;
-    font-family: 'Open Sans', sans-serif;
+body {
+  background-color: #4c4848;
+  font-family: 'Open Sans', sans-serif;
+}
+
+h2 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 2.4em;
+  text-transform: uppercase;
+  text-align: center;
+  color: rgb(0, 0, 0);
+}
+
+.contenedor {
+  width: 100%;
+  margin: 0 auto;
+}
+
+@media(min-width:480px) {
+  .contenedor {
+    width: 95%;
   }
-  h2{
-      font-family: 'Oswald', sans-serif;
-      font-size: 2.4em;
-      text-transform: uppercase;
-      text-align: center;
-      color:rgb(0, 0, 0);
-    }
-  .contenedor{
-      width: 100%;
-      margin:0 auto;
-    }
-    @media(min-width:480px){
-      .contenedor{
-        width: 95%;
-      }
-    }
-    @media(min-width:768px){
-      .contenedor{
-        width: 90%;
-      }
-    }
-    @media(min-width:992px){
-      .contenedor{
-        width: 90%;
-        max-width: 1100px;
-      }
-    }
-    .seccion{
-      padding:30px 0;
-    }
-    .seccion p{
-      font-size: 1.2em;
-      text-align: center;
-    }
-  /*NAV*/
-  .encabezadologo{
-      width: 145px;
-      height: 45px;
-      margin-top: 0px;
-      margin-left: 30px;
-      cursor: pointer;
+}
+
+@media(min-width:768px) {
+  .contenedor {
+    width: 90%;
   }
-    /*Invitados*/
-  .lista-pokemon li{
-      padding: 10px;
-      float:left;
-      list-style: none;
-    }
-    
-    @media(min-width:480px){
-      .lista-pokemon li{
-        width: 50%;
-      }
-    }
-    @media(min-width:768px){
-      .lista-pokemon li{
-        width: 25%;
-      }
-    }
-    
-    .pokemon{
-      position: relative;
-    }
-    .pokemon img{
-      max-width:100%;
-      filter: gray;
-      -webkit-filter: grayscale(1);
-      transition: all .5s ease-in-out;
-    }
-    
-    .pokemon:hover img{
-      filter: grayscale(0);
-      transform: scale(1.1);
-    
-    }
-    .pokemon p{
-      position:absolute;
-      bottom: 0;
-      left: 0;
-      padding:15px 10px;
-      margin:0;
-      background-color: rgba(0, 0, 0, .55);
-      width: 100%;
-      text-align: left;
-      font-family: 'Oswald', sans-serif;
-      color:rgb(165, 21, 21);
-      text-transform: uppercase;
-      font-size: 1.4em;
-      transition: all .5 ease-in-out;
-    }
-    
-    .pokemon:hover p{
-      bottom: -80px;
-      opacity: 0;
-    }
-  
+}
+
+@media(min-width:992px) {
+  .contenedor {
+    width: 90%;
+    max-width: 1100px;
+  }
+}
+
+.seccion {
+  padding: 30px 0;
+}
+
+.seccion p {
+  font-size: 1.2em;
+  text-align: center;
+}
+
+/*NAV*/
+.encabezadologo {
+  width: 145px;
+  height: 45px;
+  margin-top: 0px;
+  margin-left: 30px;
+  cursor: pointer;
+}
+
+/*Invitados*/
+.lista-pokemon li {
+  padding: 10px;
+  float: left;
+  list-style: none;
+}
+
+@media(min-width:480px) {
+  .lista-pokemon li {
+    width: 50%;
+  }
+}
+
+@media(min-width:768px) {
+  .lista-pokemon li {
+    width: 25%;
+  }
+}
+
+.pokemon {
+  position: relative;
+}
+
+.pokemon img {
+  max-width: 100%;
+  filter: gray;
+  -webkit-filter: grayscale(1);
+  transition: all .5s ease-in-out;
+}
+
+.pokemon:hover img {
+  filter: grayscale(0);
+  transform: scale(1.1);
+
+}
+
+.pokemon p {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 15px 10px;
+  margin: 0;
+  background-color: rgba(0, 0, 0, .55);
+  width: 100%;
+  text-align: left;
+  font-family: 'Oswald', sans-serif;
+  color: rgb(165, 21, 21);
+  text-transform: uppercase;
+  font-size: 1.4em;
+  transition: all .5 ease-in-out;
+}
+
+.pokemon:hover p {
+  bottom: -80px;
+  opacity: 0;
+}
+
+.maspokes {
+  display: flex;
+  justify-content: center;
+}
+
+@media(min-width:768px) {
+  .maspokes {
+    display: flex;
+    justify-content: center;
+  }
+
+  .siguiente {
+    font-size: 1.5em;
+    color: white;
+    margin-top: 30px;
+  }
+}
+
+@media(min-width:480px) {
+  .maspokes {
+    display: flex;
+    justify-content: center;
+  }
+
+  .siguiente {
+    font-size: 1.5em;
+    color: white;
+    margin-top: 30px;
+  }
+}
+
+.siguiente {
+  font-size: 1.5em;
+  color: white;
+  margin-top: 30px;
+}
