--- a/src/css/pokemon.css
+++ b/src/css/pokemon.css
@@ -99,21 +99,17 @@ body {
 }
 
 .imagenPoke {
-    height: 55vh;
+    height: 60vh;
     /* width: 100%; */
 }
 
 .cardImagenPoke {
-    color: white;
-    font-size: 25px;
-    margin-left: 30px;
-    font-weight: bold;
-    text-align: center;
-
+    margin-left: 60px;
+    margin-top: 50px;
 }
 
 .contenedorPokemon-Imagen {
-    width: 50vw;
+    width: 80vw;
 }
 
 .msjError {
